hard-gists/736778/run.log
=== Docker Run Log for 736778 ===
Started at: Mi 29. Okt 17:05:56 CET 2025

[2025-10-29 17:05:56] START: Running container for 736778
[2025-10-29 17:05:57] SUCCESS: Container a7be3c96057ccedcc8eceb8abc169d3bfb7ae9ecbfcd25a0c607570e98e12208 started for 736778
=== Container logs for 736778 ===
  File "/snippet.py", line 52
    print c, ': ', timeit.timeit(c, setup)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 736778 ===
[2025-10-29 17:05:59] INFO: Container a7be3c96057ccedcc8eceb8abc169d3bfb7ae9ecbfcd25a0c607570e98e12208 has stopped
